profilelist1exp/unpackaged/objects/S_P_Vendor_Automation__c.object
<CustomObject>
    <description>This custom object will represent vendors implementing the automated process for S&amp;P Deal Registrations</description>
    <fields>
        <fullName>Automation_Type__c</fullName>
        <label>Automation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Automation</fullName>
                    <default>true</default>
                    <label>Full Automation</label>
                </value>
                <value>
                    <fullName>Partial Automation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integration_Key_Expiration_Days__c</fullName>
        <label>Integration Key Expiration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_for_Encoding_and_Decoding__c</fullName>
        <label>Key for Encoding and Decoding</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_URL__c</fullName>
        <label>Vendor URL</label>
        <type>Url</type>
    </fields>
    <label>S&amp;P Vendor Automation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SVA #{000000000}</displayFormat>
        <label>S&amp;P Vendor Automation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Vendors Automations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>